removed ghost language

--- a/post21.html
+++ b/post21.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>21 The romantic ghost</h2>
+            <h2>21 The Romantic template</h2>
             <p>The "AI is fascist" thing doesn't work. Maybe it used to. But it's recycled material now.</p>
             <p>I worked out my own definition of <a href="post9.html">what I called "Romantic Evil."</a> I was trying to pin down what animates one kind of opposition to AI. The marks of it looked something like this:</p>
 
@@ -27,7 +27,7 @@
 
             <p>This is obviously the same vocabulary used to attack AI. The whole argument is that AI art is evil because it's <em>inauthentic</em> (made by a machine, not a person), <em>instrumental</em> (a tool for power and profit), and results in a <em>profaned communion</em> (art without a soul).</p>
             <p>I already <a href="post13.html">summed this up before</a>. The anxieties about AI as fascist are the same old romantic anxieties. The problem isn't that the feelings aren't real. The problem is the diagnosis is a hundred years out of date. Or two hundred years.</p>
-            <p>We're trying to understand a new kind of machine with a pre-industrial vocabulary.</p>
+            <p>We're trying to understand a new kind of machine with concepts we've inherited from a pre-industrial age.</p>
             
             <p><a href="index.html">Back to Home</a> | <a href="post22.html">Next Post</a></p>
         </article>
