--- a/post27.html
+++ b/post27.html
@@ -31,7 +31,7 @@
 
             <p>We no longer live in that world. As the last post argued, we have replaced the pastor-as-herald with the <a href="post26.html">pastor-as-Romantic-author</a>. We now demand that the sermon be a work of <a href="post9.html">"sincerity"</a> and "living speech," born from the pastor's own unique, interior struggle. The authority, we feel, must be authenticated by the personal and emotional investment of the individual soul. The postil system, which privileged the objective message over the subjective messenger, feels alien to us.</p>
             
-            <p>The history of the postil serves as a historical control group for our feelings about AI. It proves that the modern rejection of machine-assisted writing in sacred contexts is not a timeless theological absolute. It is the product of a profound and relatively recent shift in our culture's idea of what an author is and what gives a text its soul. Before we could fear the machine, we first had to invent the ghost that we now fear the machine lacks.</p>
+            <p>The history of the postil serves as a historical control group for our feelings about AI. It proves that the modern rejection of machine-assisted writing in sacred contexts is not a timeless theological absolute. It is the product of a profound and relatively recent shift in our culture's idea of what an author is and what gives a text its soul. Before we could fear the machine, we first had to inherit the notion of authentic authorship we now fear the machine lacks.</p>
 
             <p><a href="index.html">Back to Home</a> | <a href="post28.html">Next Post</a></p>
         </article>
