--- a/post32.html
+++ b/post32.html
@@ -17,7 +17,7 @@
 <h2>32 Harari's AI future (Part 2)</h2>
 <p>In the <a href="post31.html">last post</a>, I took a look at Yuval Noah Harari's warnings about AI using Ellul's <em>Propaganda</em>. Ellul's work shows that Harari's "future" is already here. Then I ended by bringing up words in Harari like "consciousness," "feelings," and "intimacy." He's worried about a machine that can mimic the human soul.</p>
 
-<p>And that's the tell. His critique of AI is the <a href="post21.html">Romantic ghost recycling project</a> this blog has been noticing.</p>
+<p>And that's the tell. His critique of AI is a rewriting of<a href="post21.html">the Romantic trace</a> this blog has been tracking.</p>
 
         <h3>The Inner Light vs. The Cold Machine</h3>
         <p>The whole thing hangs on Harari's distinction between intelligence and consciousness.</p>
@@ -44,7 +44,7 @@
 
         <p>So, Harari's entire argument against AI is a defense of the Romantic soul. He's afraid the machine will profane a sacred space. But this brings us back to Ellul, and back to the uncomfortable question from <a href="post28.html">another post</a>: What if there's no one there to begin with? What if "Shakespeare winces not"?</p>
 
-        <p>Ellul's argument is that the technological society has already profaned that space. We are already living in a world of mass-produced intimacy, managed emotions, and total propaganda. The authentic, sincere, Romantic individual Harari is trying to protect from the machine has long since been integrated into the system. Harari is standing guard over an empty tomb, afraid a robot is going to steal a ghost that's already gone.</p>
+        <p>Ellul's argument is that the technological society has already profaned that space. We are already living in a world of mass-produced intimacy, managed emotions, and total propaganda. The authentic, sincere, Romantic individual Harari is trying to protect from the machine has long since been integrated into the system. Harari is standing guard over a faint outline, afraid a robot will take something whose trace has already faded.</p>
 
         <p><a href="index.html">Back to Home</a> | <a href="post33.html">Next Post</a></p>
     </article>
