--- a/post46.html
+++ b/post46.html
@@ -21,7 +21,7 @@
             
             <p>And yet, at the core of Carlyle's thunderous vision is the same quiet virtue the song champions: sincerity. "A deep, great, genuine sincerity," Carlyle writes, "is the first characteristic of all men in any way heroic." For him, the Great Man is defined by his connection to the "everlasting truth of Nature," his inability to live in a world of "semblances and forms."</p>
 
-            <p>This is the key. The song's cowboy and Carlyle's Cromwell share the same soul, but they inhabit different worlds. The song can be read as a direct answer to the Carlylean project. It looks at the grand, historical hero—the man who shapes nations—and says, "I don't wanna be your hero." It rejects the scale but keeps the essence.</p>
+            <p>This is the key. The song's cowboy and Carlyle's Cromwell share the same soul, but they inhabit different worlds. The song can be read as a direct answer to the Carlylean project. It looks at the grand, historical hero (the man who shapes nations) and says, "I don't wanna be your hero." It rejects the scale but keeps the essence.</p>
             
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
                 <p><strong>Carlyle's Hero:</strong> A "great chaotic inarticulate Cromwell," a "bringer-back of men to reality," whose sincerity is the engine of historical change.</p>
