--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post52.html">52 Ugh</a></li>
                 <li><a href="post51.html">51 So about that shopping cart</a></li>
                 <li><a href="post50.html">50 Three mothers, two systems of meaning</a></li>
                 <li><a href="post49.html">49 Just a kid like everyone else</a></li>
@@ -45,7 +46,7 @@
                 <li><a href="post24.html">24 We get this thinking in us - part 3</a></li>
                 <li><a href="post23.html">23 We get this thinking in us - part 2</a></li>
                 <li><a href="post22.html">22 We get this thinking in us - part 1</a></li>
-                <li><a href="post21.html">21 The romantic ghost</a></li>
+                <li><a href="post21.html">21 The Romantic trace</a></li>
                 <li><a href="post20.html">20 AI and fascism</a></li>
                 <li><a href="post19.html">19 A big thank-you to Benjamin, but...</a></li>
                 <li><a href="post18.html">18 Theses on an AI notebook (a guest post)</a></li>
