neel nanda switch

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="post53.html">53 Neel Nanda</a></li>
                 <li><a href="post52.html">52 Ugh</a></li>
                 <li><a href="post51.html">51 So about that shopping cart</a></li>
                 <li><a href="post50.html">50 Three mothers, two systems of meaning</a></li>
