--- a/post21.html
+++ b/post21.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>21 The Romantic template</h2>
+            <h2>21 The Romantic trace</h2>
             <p>The "AI is fascist" thing doesn't work. Maybe it used to. But it's recycled material now.</p>
             <p>I worked out my own definition of <a href="post9.html">what I called "Romantic Evil."</a> I was trying to pin down what animates one kind of opposition to AI. The marks of it looked something like this:</p>
 
