much expanded blog with quick kit

--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
     <h1><a href="index.html">My AI Notebook</a></h1>
 </header>
     <main>
+        <section class="quickkit-card">
+        <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — a calm hub for Romanticism & Romantic hermeneutics (terms, method, contexts, links).</p>
+        </section>
+
+
         <nav>
             <ul>
-                <li><a href="post53.html">53 Neel Nanda</a></li>
+                <li><a href="post59.html">59 Putting the Toolkit to Work: A Hermeneutic Reading of "Hero"</a></li>
+                <li><a href="post58.html">58 "Better Than He Understood Himself": Why Interpretation Is Irreducible</a></li>
+                <li><a href="post57.html">57 The Interpreter's Blind Spot: Why Analyzing the System Isn't Enough</a></li>
+                <li><a href="post56.html">56 Beyond the Teenage Diary: The Rigor of Romantic Individuality</a></li>
+                <li><a href="post55.html">55 More Than Bullshit: A Romantic Reading of the Textual Unconscious</a></li>
+                <li><a href="post54.html">54 Reclaiming the Romantic "Author"</a></li>
+                <li><a href="post53.html">53 Romanticism Was Never Naïve: A Defense in the Age of AI</a></li>
                 <li><a href="post52.html">52 Ugh</a></li>
                 <li><a href="post51.html">51 So about that shopping cart</a></li>
                 <li><a href="post50.html">50 Three mothers, two systems of meaning</a></li>
