--- a/post10.html
+++ b/post10.html
@@ -42,7 +42,7 @@
 <h3>Moral Center</h3>
 <p>Goodness here is democratic control over the material conditions of life: worker power, transparent and contestable decisions, consent‑respecting data practices, and ecological limits.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post11.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post9.html">Previous Post</a> | <a href="post11.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
