--- a/post11.html
+++ b/post11.html
@@ -40,7 +40,7 @@
 <h3>Moral Center</h3>
 <p>Goodness is truthful conversation ordered to real communion. Mutual self‑gift before a someone who can answer and be responsible.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post12.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post10.html">Previous Post</a> | <a href="post12.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
