--- a/post16.html
+++ b/post16.html
@@ -24,7 +24,7 @@
             <p>This gets to the heart of it. Propaganda doesn't feel like a command from outside. It feels like an emotion from inside. It makes me feel that my anger is righteous, that my desires are just. It boosts my ego.</p>
             <p>The most successful propaganda makes me feel more like myself. And the more I feel like myself, the more I'm in its grip.</p>
             
-            <p><a href="index.html">Back to Home</a> | <a href="post17.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post15.html">Previous Post</a> | <a href="post17.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
