--- a/post17.html
+++ b/post17.html
@@ -24,7 +24,7 @@
             <p>Propaganda succeeds by giving us the feeling of uniqueness. It makes us feel seen. By satisfying our very real need to be an individual, it disarms us. We lower our defenses because it doesn't feel like a lecture to a crowd, it feels like a conversation.</p>
             <p>This is what keeps the "human spark" alive. It's a managed flame, tended by a system that needs us to feel like individuals so that we will conform to its desires. This is what any perfectly personalized or customized thing is designed to do.</p>
             
-            <p><a href="index.html">Back to Home</a> | <a href="post18.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post16.html">Previous Post</a> | <a href="post18.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
