--- a/post19.html
+++ b/post19.html
@@ -17,7 +17,7 @@
             <h2>19 A big thank-you to Benjamin, but...</h2>
             <p>So of course, a definite big thank-you to <a href="post18.html">Benjamin for his post</a>. But I don't know if I buy it.</p>
             <p>Trying to work out why. And the bigger priority, trying to work out what the live options here are.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post20.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post18.html">Previous Post</a> | <a href="post20.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
