--- a/post20.html
+++ b/post20.html
@@ -21,7 +21,7 @@
             
             <p>Just <a href="post14.html">like before </a>, I don't buy it. So much of the fight against AI comes down to gut feelings about "sincerity and authenticity and the human spark." It's just emotional reaction dressed up as political analysis. But it's out there. So here goes some thinking about it.</p>
             
-            <p><a href="index.html">Back to Home</a> | <a href="post21.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post19.html">Previous Post</a> | <a href="post21.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
