--- a/post21.html
+++ b/post21.html
@@ -29,7 +29,7 @@
             <p>I already <a href="post13.html">summed this up before</a>. The anxieties about AI as fascist are the same old romantic anxieties. The problem isn't that the feelings aren't real. The problem is the diagnosis is a hundred years out of date. Or two hundred years.</p>
             <p>We're trying to understand a new kind of machine with concepts we've inherited from a pre-industrial age.</p>
             
-            <p><a href="index.html">Back to Home</a> | <a href="post22.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post20.html">Previous Post</a> | <a href="post22.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
