--- a/post22.html
+++ b/post22.html
@@ -25,7 +25,7 @@
                 <p>...the me that feels the warmth of the sun on my face and that feels the pressure of the of this chair on my body isn't the same me that is actually talking about it and that is a an uncomfortable realization... it it almost feels you know almost parasitic that there's another organism and it's not me that's living inside of me.</p>
             </blockquote>
             <p>Two very different speakers, one an optimist and the other a scientist, arrive at the same strange place. They both, in their own way, describe language and thought as a system running independently inside the human host. This suggests the old romantic vocabulary of authenticity and the individual soul won't help us here. We need a way to talk about the system itself.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post23.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post21.html">Previous Post</a> | <a href="post23.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
