--- a/post26.html
+++ b/post26.html
@@ -26,7 +26,7 @@
             <p>It's useful to remember that this wasn't always the case. For centuries, it was common for pastors to use a <em>postil</em> (a book of pre-written sermons) to aid their preaching. The pastor's role was that of a faithful herald, not a unique creative artist. The modern expectation is different. We expect the writer's struggle to be felt by the reader, or in this case, the listener. We expect our pastors to be Romantic authors. Stiegemeyer’s thoughtful critique is an articulation of this modern, and deeply romanticized, conception of the pastoral office.</p>
             <p>The question is whether this is required by scripture or ancient tradition or mainly a holdover from sources (Romantic literature) not particularly religious at all. And in many ways, antithetical to faith.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post27.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post25.html">Previous Post</a> | <a href="post27.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
