--- a/post27.html
+++ b/post27.html
@@ -33,7 +33,7 @@
             
             <p>The history of the postil serves as a historical control group for our feelings about AI. It proves that the modern rejection of machine-assisted writing in sacred contexts is not a timeless theological absolute. It is the product of a profound and relatively recent shift in our culture's idea of what an author is and what gives a text its soul. Before we could fear the machine, we first had to inherit the notion of authentic authorship we now fear the machine lacks.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post28.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post26.html">Previous Post</a> | <a href="post28.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
