--- a/post28.html
+++ b/post28.html
@@ -29,7 +29,7 @@
 
             <p>The fear showing up in the teachers in this conversation -- it isn’t that AI lacks a human soul. The fear really comes from what we all know in a pragmatic way: the human connection we talk about when we talk about books has never been there to begin with. (Assuming, here, the author isn't someone the reader knows.) The author does not wince. Words can't wince.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post29.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post27.html">Previous Post</a> | <a href="post29.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
