--- a/post29.html
+++ b/post29.html
@@ -39,7 +39,7 @@
 
             <p>The objection that AI will destroy the soul of education misses the point entirely. We have been systematically removing that soul for decades. For centuries, Ellul would say. We have built a system that prizes efficiency, predictability, and risk management. A system perfectly suited for AI. AI is not the alien invader. It is the logical, inevitable fulfillment of the educational machine we have already built.</p>
             
-            <p><a href="index.html">Back to Home</a> | <a href="post30.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post28.html">Previous Post</a> | <a href="post30.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
