--- a/post31.html
+++ b/post31.html
@@ -53,7 +53,7 @@
 
         <p>But looking back over this, I see Harari using words like "consciousness," "feelings," and "intimacy." He worries AI, which has "zero consciousness," will mimic these things. This is all really familiar for my blog. It's the language of the <a href="post9.html">Romantic worldview</a> I trying to circle back to. That's what I'll do in Part 2.</p>
 
-        <p><a href="index.html">Back to Home</a> | <a href="post32.html">Next Post</a></p>
+        <p><a href="index.html">Home</a> | <a href="post30.html">Previous Post</a> | <a href="post32.html">Next Post</a></p>
     </article>
 </main>
 <footer data-template="footer">
