--- a/post32.html
+++ b/post32.html
@@ -46,7 +46,7 @@
 
         <p>Ellul's argument is that the technological society has already profaned that space. We are already living in a world of mass-produced intimacy, managed emotions, and total propaganda. The authentic, sincere, Romantic individual Harari is trying to protect from the machine has long since been integrated into the system. Harari is standing guard over a faint outline, afraid a robot will take something whose trace has already faded.</p>
 
-        <p><a href="index.html">Back to Home</a> | <a href="post33.html">Next Post</a></p>
+        <p><a href="index.html">Home</a> | <a href="post31.html">Previous Post</a> | <a href="post33.html">Next Post</a></p>
     </article>
 </main>
 <footer data-template="footer">
