--- a/post34.html
+++ b/post34.html
@@ -24,7 +24,7 @@
 
             <p>There's a permeability here I want to find out about. First, the boundary between "spirit" and "flesh" is broken to create the giants. Then, when the giants die, their own spirits are unleashed. So now the human world is permanently open to these spirits' ability to "afflict, oppress, destroy, attack."</p>
             
-            <p><a href="index.html">Back to Home</a> | <a href="post35.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post33.html">Previous Post</a> | <a href="post35.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
