--- a/post35.html
+++ b/post35.html
@@ -23,7 +23,7 @@
 
             <p>The idea of permeability here is almost architectural. The world is presented as a structure with "portals." It's not a closed system. It's open to an outside that sends things in. "Blessing and prosperity" and "destruction." The human world is completely open to these forces that flow in through designed entry points.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post36.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post34.html">Previous Post</a> | <a href="post36.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
