--- a/post36.html
+++ b/post36.html
@@ -40,7 +40,7 @@
             <hr>
             <p style="font-size: 0.9rem;">Quotes are from these conversations: <a href="https://www.youtube.com/watch?v=Ca_RbPXraDE&t=1080s">1</a>, <a href="https://www.youtube.com/watch?v=A36OumnSrWY&t=4187s">2</a>, <a href="https://www.youtube.com/watch?v=FIMw04GJJ7U&t=1059s">3</a>.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post37.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post35.html">Previous Post</a> | <a href="post37.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
