--- a/post37.html
+++ b/post37.html
@@ -29,7 +29,7 @@
 
             <p>This reframes the entire debate. The problem isn't that LLMs are incapable of creativity because they are just "full of averages." The problem is that most prompts don't work creatively. They don't move the model into a space where novelty is possible. The machine isn't a plagiarist or an averager; it's a probabilistic engine waiting for a prompt interesting enough to push it beyond the mean.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post38.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post36.html">Previous Post</a> | <a href="post38.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
