--- a/post39.html
+++ b/post39.html
@@ -18,7 +18,7 @@
             <p>Go to <a href="https://www.youtube.com/watch?v=p58vknxGR4I&t=3387s">56:13 in this video</a>.</p>
             <p>This is why I don't blow off <a href="https://www.youtube.com/watch?v=FIMw04GJJ7U&t=1059s">Barenholtz</a>. Or the structuralists. Language does its own thing. It follows its own patterns. It speaks through us.</p>
             <p>"This guy's an idiom."</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post40.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post38.html">Previous Post</a> | <a href="post40.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
