--- a/post4.html
+++ b/post4.html
@@ -70,7 +70,7 @@ BLD   I am a complete wreck
 <p>I loved this kind of stuff. I was trying to get better at poetry and learning C++ at the same time. I felt no contradiction in that. (Some of my professors did.) Code and poetry are compressions of language. The letters and symbols in poetry and code do something different from ordinary speech.</p>
 <p>That's just one example of computers and poetry. Computers (to me) are more like strange or distant neighbors to poetry, not enemies.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post5.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post3.html">Previous Post</a> | <a href="post5.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
