--- a/post40.html
+++ b/post40.html
@@ -35,7 +35,7 @@
             
             <p>This is a widespread moral argument against AI. But it's built on an assumption about what language is <em>for</em>. It assumes language is, or should be, a tool for sincere, truth-seeking humans. But what if that's not what language is at all? More on that next.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post41.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post39.html">Previous Post</a> | <a href="post41.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
