--- a/post41.html
+++ b/post41.html
@@ -38,7 +38,7 @@
             
             <p>So, one view sees AI's indifference to truth as a moral flaw. The other sees it as a demonstration of how language works or what it is.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post42.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post40.html">Previous Post</a> | <a href="post42.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
