--- a/post42.html
+++ b/post42.html
@@ -51,7 +51,7 @@
 
             <p>This blog might be an attempt to move past the Romantic vocabulary that has defined and limited this debate. The task is not to save the real human self from the artificial machine but to understand what it means that the machine that has been operating inside us all along.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post43.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post41.html">Previous Post</a> | <a href="post43.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
