--- a/post43.html
+++ b/post43.html
@@ -30,7 +30,7 @@
             <p>This is the world that LLMs operate in, and it's the world Barenholtz argues we operate in too, at least when we're using language. It's a system that can create infinite, intricate patterns without ever needing to touch the ground.</p>
             <p>Yeats would call all of this an attempt to separate <a href="https://www.poetryfoundation.org/poems/43293/among-school-children">the dancer from the dance</a>.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post44.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post42.html">Previous Post</a> | <a href="post44.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
