--- a/post45.html
+++ b/post45.html
@@ -25,7 +25,7 @@
             
             <p>So, the song is not anti-heroic. It's a redefinition of the heroic. It dismisses the external, performative "big man" in favor of the internal, sincere family man. It takes the core Romantic value—sincerity—and argues that it is found not in the parade, but in the quiet, often painful, reality of a life lived for others. It is a powerful modern statement of the old Romantic faith that true worth lies not in what you appear to be, but in the authentic struggle of your soul.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post46.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post44.html">Previous Post</a> | <a href="post46.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
