--- a/post46.html
+++ b/post46.html
@@ -32,7 +32,7 @@
 
             <p>The song keeps the Romantic soul but discards the grand, historic body Carlyle built for it. It argues that if a hero is one who lives in sincere contact with reality, then in our time, that hero is not a king or a prophet, but a father in a pickup truck, weary from work, driving home to his child.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post47.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post45.html">Previous Post</a> | <a href="post47.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
