--- a/post49.html
+++ b/post49.html
@@ -23,7 +23,7 @@
 
             <p>From this perspective, the song's title becomes deeply ironic. The "hero" is a persona he adopts in the arena precisely to avoid the more difficult work of being a father. The entire song can be heard as his justification for this choice, an anthem for the allure of perpetual adolescence. Framed as a simple pursuit of personal freedom, being a kid like everyone else is what prevents him from being what his daughter likely needs him to be. Yes, actually, not a "big man," not a rodeo star. The title says what she would unironically want.</p>
             
-            <p><a href="index.html">Back to Home</a> | <a href="post50.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post48.html">Previous Post</a> | <a href="post50.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
