--- a/post5.html
+++ b/post5.html
@@ -19,7 +19,7 @@
             <p>I love the feeling of clearing room, starting from scratch. But it's very destructive to every version of me that predates the present. Still, I really can't help it.</p>
             <p>There's another phrase that might seem like the opposite of "Starting...now." It's "I just keep going." One foot after another, that sort of thing. But those two phrases ("starting...now" and "I just keep going") have more in common than you might think.</p>
             <p>That's what I've decided I'm going to for real very seriously write about romantic aesthetics and ai ...starting now.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post6.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post4.html">Previous Post</a> | <a href="post6.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
