--- a/post51.html
+++ b/post51.html
@@ -23,7 +23,7 @@
             <p>But that's not the whole song. Is the "you" America? Is it the flag that shows up at different places? Is it war? (Any talk about heroes has to include hidden references to war, and what's a rodeo but a stand-in for war?) So he's not willing to be that kind of hero anymore? There's some of that, I think, but that's not it either. In <a href="post46.html">post 46</a> I say it's the "grand larger-than-life hero" the song rejects. Maybe.</p>
             <p>There are temptations to say something like "traditional masculinity" or "cultural American manhood" or something like that. But I don't think there's evidence in the song of rejecting that.</p>
             <p>I don't have an answer right now. I'm going to keep working at it. I know it's connected to our Romantic intellectual heritage though. The hero for the Romantics was such a big deal. It's why they fell so hard for Napolean.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="postx.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post50.html">Previous Post</a> | <a href="post52.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
