--- a/post52.html
+++ b/post52.html
@@ -36,7 +36,7 @@
             
             <p>In the end, Nel's video is a beautiful and heartfelt defense of what now survives only as a trace. He's guarding a sacred space—the authentic, human-to-human connection—that the technical systems we all live inside of have been systematically dismantling for centuries. The reason AI feels so threatening to this worldview is that it's the first time we've had a language machine where we can't even pretend there's a person on the other end. It strips away the illusion. It makes us confront the possibility that when it comes to language, maybe there never was a distinct presence in the language system to begin with, only patterned traces.</p>
 
-            <p><a href="index.html">Back to Home</a></p>
+            <p><a href="index.html">Home</a> | <a href="post51.html">Previous Post</a> | <a href="post53.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
