--- a/post8.html
+++ b/post8.html
@@ -43,7 +43,7 @@
     <p>This reads like an AI was prompted to write an article about AI's limitations in creating emotional art. The human involvement was likely minimal - perhaps just the initial prompt and maybe light editing. The content hits all the expected talking points but lacks the depth, nuance, and personal voice you'd expect from genuine human expertise on this subject.</p>
 </blockquote>
         <p>Do with that what you will.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post9.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post7.html">Previous Post</a> | <a href="post9.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
