--- a/post9.html
+++ b/post9.html
@@ -35,7 +35,7 @@
 <h3>Moral Center</h3>
 <p>Goodness is integrity: self-gift to one’s call; fidelity under risk; conversation that meets a person as a person; and a willingness to suffer the tragic costs of living in truth. The romantic conscience prizes the singular, the vowed, and the answerable over comfort, utility, and faceless universals.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post10.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post8.html">Previous Post</a> | <a href="post10.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
