--- a/header.html
+++ b/header.html
@@ -1,3 +1,8 @@
-<header>
-    <h1><a href="index.html">My AI Notebook</a></h1>
+<header class="site-header">
+  <h1><a href="index.html">My AI Notebook</a></h1>
+  <nav class="top-links">
+    <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+      romantic quick kit
+    </a>
+  </nav>
 </header>
