--- a/post12.html
+++ b/post12.html
@@ -40,7 +40,7 @@
 <h3>Moral Center</h3>
 <p>Goodness is consent-honoring, personed creativity; love’s attentive labor; and safeguarding sacred speech and rites from simulacra.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post13.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post11.html">Previous Post</a> | <a href="post13.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
