--- a/post14.html
+++ b/post14.html
@@ -19,7 +19,7 @@
             <p>I don't buy it though. So much of the fight against AI is about sincerity and authenticity and some notion of a human spark.</p>
             <p>Why don't I buy that? Because we're not living in the 1800's anymore.</p>
             <p>Pretty crazy, though. All it took to get philosophy tube to hold hands with the catholics was to serve up a solid shared villain: AI chatbots.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post15.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post13.html">Previous Post</a> | <a href="post15.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
