--- a/post18.html
+++ b/post18.html
@@ -41,7 +41,7 @@
             
             <p>The question, then, is not the Romantic one of whether AI can have a soul. That is a flight into theology. The question is political: what new forms of human organization and perception does this apparatus make possible? Mankind, which in Homer's time was an object of contemplation for the Olympian gods, now is one for itself. Its self-alienation has reached such a degree that it can experience its own manipulation as a form of authentic expression. This is the situation of politics which this new technology is rendering aesthetic. The task remains to politicize art.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post19.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post17.html">Previous Post</a> | <a href="post19.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
