--- a/post2.html
+++ b/post2.html
@@ -15,7 +15,7 @@
         <article>
             <h2>2 Hallucinations and misinformation and AI</h2>
             <p>This is near the top of the list of things I can't understand. I know why journalists and historians don't like AI hallucinations and misinformation. Their job is to get the facts straight. But creative writing? It's hallucations all the way down. So I don't understand why fiction writers and poets worry about AI making stuff up. It's what we do.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post3.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post1.html">Previous Post</a> | <a href="post3.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
