--- a/post23.html
+++ b/post23.html
@@ -32,7 +32,7 @@
             <hr>
             <p style="font-size: 0.9rem;">Jonathan Culler, <em>Saussure</em> (Fontana Modern Masters, 1976).</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post24.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post22.html">Previous Post</a> | <a href="post24.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
