--- a/post3.html
+++ b/post3.html
@@ -17,7 +17,7 @@
             <h2>3 A guiding principle</h2>
             <p>I'm starting from scratch with this blog. What are my actual thoughts about AI? I've been absorbed in AI as a writing professor and on my own time for a few years. It's a good idea sometimes. Start over and pretend not to have any opinions yet. So that's the goal of this site.</p>
             <p>I do have a working principle, though. Writers should be free. They should experiment and try things out. I'm not afraid of AI. AI-built stuff doesn't fill me with distaste or anxiety or anger. I use AI for plenty of things myself. And I am often underwhelmed. I can see that gap between AI-booster promises and the actual AI outputs. But I write with the tools at hand. And I think about everything. Nothing off-limits ahead of time. AI or not.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post4.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post2.html">Previous Post</a> | <a href="post4.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
