--- a/post30.html
+++ b/post30.html
@@ -18,7 +18,7 @@
             <p>But what about <a href="post25.html">Whitman</a>?</p>
             <p>I know. I have the same question every day. I love that poem.</p>
             <p>So I don't know. I'm trying to figure it out.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post31.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post29.html">Previous Post</a> | <a href="post31.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
