--- a/post38.html
+++ b/post38.html
@@ -16,7 +16,7 @@
         <article>
             <h2>38 Is AI bullshit?</h2>
             <p><a href="https://en.wikipedia.org/wiki/On_Bullshit">Yes.</a></p>
-            <p><a href="index.html">Back to Home</a> | <a href="post39.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post37.html">Previous Post</a> | <a href="post39.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
