--- a/post44.html
+++ b/post44.html
@@ -19,7 +19,7 @@
             <p>What do I think about AI?</p>
             <p>Mostly, I'm curious. I enjoy experimenting with LLM's, and I don't feel alienated from them or threatened by them. I'm not sure why. It could mean that I simply don't share much of the Eomantic worldview, but I probably have a lot of unexamined Romantic assumptions since it's looking like almost everyone does.</p>
             <p>A more serious point I'd make is that people who are sympathetic to Foucault or Judith Butler, intellectuals with serious objections to the essentialist ideas of the Romantics, should start protesting a lot less about AI. If you've been on Foucault's side in a bunch of debates or if you nod along when you read <em>Gender Trouble</em>, then you probably need to nod along a little more often when you read what AI's got to say.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post45.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post43.html">Previous Post</a> | <a href="post45.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
