--- a/post47.html
+++ b/post47.html
@@ -27,7 +27,7 @@
 
             <p>This is a more modernist reading. It deflates the simple, sentimental heroism of the Romantic view. There is no singular, authentic self here, but a man divided, perhaps telling himself a story of heroism to justify choices that have caused real pain. The video's power lies not in presenting a clear hero, but in showing us the tension between the heroic story we want to believe and the messier, more ambiguous reality of a fractured life. It leaves us with a question that has no easy answer: he may be a hero, but for whom, and at what cost?</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post48.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post46.html">Previous Post</a> | <a href="post48.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
