--- a/post50.html
+++ b/post50.html
@@ -44,7 +44,7 @@
             
             <p>The "truth" is not found in either narrative but in the structure of their conflict. The romantic seeks a sincere soul, the modernist seeks a fractured one, but the structuralist sees only the "dance of symbols" (<a href="post43.html">Post 43</a>). The video doesn't tell us who the cowboy "really" is. It simply puts the visual codes for "Hero" and "Homewrecker" into play and leaves the system to generate its own irresolvable meaning.</p>
 
-            <p><a href="index.html">Back to Home</a> | <a href="post51.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post49.html">Previous Post</a> | <a href="post51.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
