--- a/post6.html
+++ b/post6.html
@@ -18,7 +18,7 @@
             <p>Two things I reject as basic to art: originality and authenticity. My reasons are easy to state simply.</p>
             <p>Originality - if art has to be original in order to count as art, then almst nobody makes art because almost nothing is actually original.</p>
             <p>Authenticity - if authenticity is the measure of art, then the personal diary of a 13 or 14-year old working out their feelings is the highest form of art.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post7.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post5.html">Previous Post</a> | <a href="post7.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
